--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
     "@mui/icons-material": "^5.6.2",
     "@mui/material": "^5.7.0",
     "@mui/styled-engine-sc": "^5.7.0",
+    "axios": "^0.27.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-toastify": "^9.1.3",
+    "reactstrap": "^9.2.0",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
@@ -39,7 +42,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.29.4",
-    "prettier": "^2.6.2",
+    "prettier": "^2.8.8",
     "typescript": "^4.6.3",
     "vite": "^2.9.7"
   }
