--- a/package.json
+++ b/package.json
@@ -14,17 +14,18 @@
     "lint-staged:js": "eslint --ext .js,.jsx,.ts,.tsx "
   },
   "dependencies": {
-    "@emotion/react": "^11.9.0",
-    "@emotion/styled": "^11.8.1",
-    "@mui/icons-material": "^5.6.2",
-    "@mui/material": "^5.7.0",
-    "@mui/styled-engine-sc": "^5.7.0",
+    "@types/jest": "^29.5.2",
+    "@types/node": "^20.3.1",
     "axios": "^0.27.2",
+    "bootstrap": "^5.3.0",
     "react": "^18.0.0",
+    "react-bootstrap": "^2.7.4",
     "react-dom": "^18.0.0",
     "react-toastify": "^9.1.3",
     "reactstrap": "^9.2.0",
-    "styled-components": "^5.3.5"
+    "sass": "^1.63.6",
+    "styled-components": "^5.3.5",
+    "web-vitals": "^3.3.2"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.17.0",
