--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@typescript-eslint/eslint-plugin": "^5.23.0",
     "@typescript-eslint/parser": "^5.23.0",
     "@vitejs/plugin-react": "^1.3.0",
+    "autoprefixer": "^10.4.16",
     "eslint": "^8.15.0",
     "eslint-config-alloy": "^4.5.1",
     "eslint-config-prettier": "^8.5.0",
@@ -45,7 +46,9 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.29.4",
+    "postcss": "^8.4.31",
     "prettier": "^2.8.8",
+    "tailwindcss": "^3.3.5",
     "typescript": "^4.6.3",
     "vite": "^2.9.7"
   }
