--- a/package.json
+++ b/package.json
@@ -15,41 +15,45 @@
     "clean": "npx rimraf node_modules"
   },
   "dependencies": {
-    "@types/jest": "^29.5.2",
-    "@types/node": "^20.3.1",
+    "@types/jest": "^29.5.8",
+    "@types/node": "^20.9.0",
+    "@types/react-router": "^5.1.20",
+    "@types/react-router-dom": "^5.3.3",
     "axios": "^0.27.2",
-    "bootstrap": "^5.3.0",
-    "react": "^18.0.0",
-    "react-bootstrap": "^2.7.4",
-    "react-dom": "^18.0.0",
+    "bootstrap": "^5.3.2",
+    "react": "^18.2.0",
+    "react-bootstrap": "^2.9.1",
+    "react-dom": "^18.2.0",
     "react-query": "^3.39.3",
+    "react-router": "^6.18.0",
+    "react-router-dom": "^6.18.0",
     "react-toastify": "^9.1.3",
     "reactstrap": "^9.2.0",
-    "sass": "^1.63.6",
-    "styled-components": "^5.3.5",
-    "web-vitals": "^3.3.2"
+    "sass": "^1.69.5",
+    "styled-components": "^5.3.11",
+    "web-vitals": "^3.5.0"
   },
   "devDependencies": {
-    "@babel/eslint-parser": "^7.17.0",
-    "@types/react": "^18.2.12",
-    "@types/react-dom": "^18.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.23.0",
-    "@typescript-eslint/parser": "^5.23.0",
-    "@vitejs/plugin-react": "^1.3.0",
+    "@babel/eslint-parser": "^7.22.15",
+    "@types/react": "^18.2.37",
+    "@types/react-dom": "^18.2.15",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "@typescript-eslint/parser": "^5.62.0",
+    "@vitejs/plugin-react": "^1.3.2",
     "autoprefixer": "^10.4.16",
-    "eslint": "^8.15.0",
-    "eslint-config-alloy": "^4.5.1",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-config-standard": "^17.0.0",
-    "eslint-plugin-import": "^2.25.2",
-    "eslint-plugin-n": "^15.0.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-promise": "^6.0.0",
-    "eslint-plugin-react": "^7.29.4",
+    "eslint": "^8.53.0",
+    "eslint-config-alloy": "^4.9.0",
+    "eslint-config-prettier": "^8.10.0",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-plugin-import": "^2.29.0",
+    "eslint-plugin-n": "^15.7.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-react": "^7.33.2",
     "postcss": "^8.4.31",
     "prettier": "^2.8.8",
     "tailwindcss": "^3.3.5",
-    "typescript": "^4.6.3",
-    "vite": "^2.9.7"
+    "typescript": "^4.9.5",
+    "vite": "^2.9.16"
   }
 }
