--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,7 @@
       "@libs/*": ["src/libs/*"],
       "@components/*": ["src/components/*"],
       "@pages/*": ["src/pages/*"],
+      "@api/*": ["src/api/*"],
       "@routers/*": ["src/routers/*"]
     }
   },
