--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,10 @@ dist-ssr
 
 # Editor directories and files
 .vscode/*
+.storybook/*
+.vs/*
+.vscode/*
+.VSCodeCounter/*
 !.vscode/extensions.json
 .idea
 .DS_Store
