--- a/package.json
+++ b/package.json
@@ -1,59 +1,72 @@
 {
-    "name": "my-react-vite",
-    "private": true,
-    "version": "0.0.0",
-    "scripts": {
-        "prebuild": "npx rimraf dist",
-        "dev": "vite",
-        "build": "tsc && vite build",
-        "preview": "vite preview",
-        "lint": "npm run lint:js && npm run lint:style && npm run lint:prettier",
-        "lint:js": "eslint --cache --ext .js,.jsx,.ts,.tsx --format=pretty ./src",
-        "lint:prettier": "prettier --check './src/**/*.{tsx,ts}' --end-of-line auto",
-        "lint-staged": "lint-staged",
-        "lint-staged:js": "eslint --ext .js,.jsx,.ts,.tsx ",
-        "clean": "npx rimraf node_modules"
-    },
-    "dependencies": {
-        "@types/react-router-dom": "^5.3.3",
-        "axios": "^1.6.2",
-        "bootstrap": "^5.3.2",
-        "react": "^18.2.0",
-        "react-bootstrap": "^2.9.1",
-        "react-dom": "^18.2.0",
-        "react-query": "^3.39.3",
-        "react-router-dom": "^6.19.0",
-        "react-toastify": "^9.1.3",
-        "reactstrap": "^9.2.1",
-        "sass": "^1.69.5",
-        "styled-components": "^6.1.1",
-        "web-vitals": "^3.5.0"
-    },
-    "devDependencies": {
-        "@babel/eslint-parser": "^7.23.3",
-        "@types/jest": "^29.5.8",
-        "@types/node": "^20.9.2",
-        "@types/react": "^18.2.37",
-        "@types/react-dom": "^18.2.15",
-        "@typescript-eslint/eslint-plugin": "^6.12.0",
-        "@typescript-eslint/parser": "^6.12.0",
-        "@vitejs/plugin-react": "^4.2.0",
-        "autoprefixer": "^10.4.16",
-        "concurrently": "^8.2.2",
-        "eslint": "^8.54.0",
-        "eslint-config-alloy": "^5.1.2",
-        "eslint-config-prettier": "^9.0.0",
-        "eslint-config-standard": "^17.1.0",
-        "eslint-plugin-import": "^2.29.0",
-        "eslint-plugin-n": "^16.3.1",
-        "eslint-plugin-prettier": "^5.0.1",
-        "eslint-plugin-promise": "^6.1.1",
-        "eslint-plugin-react": "^7.33.2",
-        "postcss": "^8.4.32",
-        "prettier": "^3.1.0",
-        "prettier-plugin-tailwindcss": "^0.5.9",
-        "tailwindcss": "^3.3.6",
-        "typescript": "^5.3.2",
-        "vite": "^5.0.0"
-    }
+  "name": "my-react-vite",
+  "private": true,
+  "version": "0.0.0",
+  "scripts": {
+    "prebuild": "npx rimraf dist",
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview",
+    "lint": "npm run lint:js && npm run lint:style && npm run lint:prettier",
+    "lint:js": "eslint --cache --ext .js,.jsx,.ts,.tsx --format=pretty ./src",
+    "lint:prettier": "prettier --check './src/**/*.{tsx,ts}' --end-of-line auto",
+    "lint-staged": "lint-staged",
+    "lint-staged:js": "eslint --ext .js,.jsx,.ts,.tsx ",
+    "clean": "npx rimraf node_modules",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
+  },
+  "dependencies": {
+    "@prisma/client": "^5.10.2",
+    "@types/react-router-dom": "^5.3.3",
+    "axios": "^1.6.2",
+    "bootstrap": "^5.3.2",
+    "react": "^18.2.0",
+    "react-bootstrap": "^2.9.1",
+    "react-dom": "^18.2.0",
+    "react-query": "^3.39.3",
+    "react-router-dom": "^6.19.0",
+    "react-toastify": "^9.1.3",
+    "reactstrap": "^9.2.1",
+    "sass": "^1.69.5",
+    "styled-components": "^6.1.1",
+    "web-vitals": "^3.5.0"
+  },
+  "devDependencies": {
+    "@babel/eslint-parser": "^7.23.3",
+    "@storybook/addon-essentials": "^7.6.7",
+    "@storybook/addon-interactions": "^7.6.7",
+    "@storybook/addon-links": "^7.6.7",
+    "@storybook/addon-onboarding": "^1.0.10",
+    "@storybook/blocks": "^7.6.7",
+    "@storybook/react": "^7.6.7",
+    "@storybook/react-vite": "^7.6.7",
+    "@storybook/test": "^7.6.7",
+    "@types/jest": "^29.5.8",
+    "@types/node": "^20.9.2",
+    "@types/react": "^18.2.37",
+    "@types/react-dom": "^18.2.15",
+    "@typescript-eslint/eslint-plugin": "^6.12.0",
+    "@typescript-eslint/parser": "^6.12.0",
+    "@vitejs/plugin-react": "^4.2.0",
+    "autoprefixer": "^10.4.16",
+    "concurrently": "^8.2.2",
+    "eslint": "^8.54.0",
+    "eslint-config-alloy": "^5.1.2",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-plugin-import": "^2.29.0",
+    "eslint-plugin-n": "^16.3.1",
+    "eslint-plugin-prettier": "^5.0.1",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-storybook": "^0.6.15",
+    "postcss": "^8.4.32",
+    "prettier": "^3.1.0",
+    "prettier-plugin-tailwindcss": "^0.5.10",
+    "storybook": "^7.6.7",
+    "tailwindcss": "^3.3.6",
+    "typescript": "^5.3.2",
+    "vite": "^5.0.0"
+  }
 }
